set(ITKParticleShapeModeling_SRC
itkPSMCommandLineClass.cxx
itkPSMDOMNodeXMLReader.cxx
itkPSMProject.cxx
itkPSMProjectReader.cxx
itkPSMProjectWriter.cxx
itkPSMParticleSystem.cxx
itkPSMProcrustesFunction.cxx
itkPSMProcrustesRegistration.cxx
)

add_library(ITKParticleShapeModeling ${ITKParticleShapeModeling_SRC})
target_link_libraries(ITKParticleShapeModeling  ${ITKstatistics_LIBRARIES} ${ITKTransform_LIBRARIES})
itk_module_target(ITKParticleShapeModeling)

add_executable(ParticleShapeModeling_CLI itkPSMCommandLineTool.cxx itkPSMCommandLineClass.cxx)
target_link_libraries(ParticleShapeModeling_CLI ITKParticleShapeModeling ITKIOXML ITKIOMeta ITKIOGDCM ITKIONRRD ${ITKIOImageBase_LIBRARIES} ${ITKstatistics_LIBRARIES} ${ITKTransform_LIBRARIES})
